--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\SharedSrc\SFMLWrapper\SFMLWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\SharedSrc\NetworkWrapper\NetworkCommands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ClientWrapper\ClientWrapper.h">
