--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\ServerProcess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\SharedSrc\NetworkWrapper\NetworkCommands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ServerWrapper\ServerWrapper.h">
