--- a/SharedSrcDev/SharedSrcDev.vcxproj
+++ b/SharedSrcDev/SharedSrcDev.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\SharedSrc\GameData\GameData.h" />
     <ClInclude Include="..\SharedSrc\NetworkWrapper\NetworkCommands.h" />
     <ClInclude Include="..\SharedSrc\NetworkWrapper\NetworkProcess.h" />
     <ClInclude Include="..\SharedSrc\SFMLWrapper\SFMLWrapper.h" />
