--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\SharedSrc\GameData\GameAI.cpp" />
+    <ClCompile Include="..\SharedSrc\GameData\Statemachine.cpp" />
     <ClCompile Include="..\SharedSrc\NetworkWrapper\NetworkCommands.cpp" />
     <ClCompile Include="..\SharedSrc\SFMLWrapper\SFMLWrapper.cpp" />
     <ClCompile Include="ClientMain.cpp" />
