--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\SharedSrc\GameData\GameAI.cpp" />
+    <ClCompile Include="..\SharedSrc\GameData\Statemachine.cpp" />
     <ClCompile Include="..\SharedSrc\NetworkWrapper\NetworkCommands.cpp" />
     <ClCompile Include="ServerMain.cpp" />
     <ClCompile Include="src\ServerProcess.cpp" />
